src/util/HttpServer/HttpParser/generated/AcceptHeaderParser.cpp

// Generated from AcceptHeader.g4 by ANTLR 4.9.2

#include "AcceptHeaderParser.h"

#include "AcceptHeaderListener.h"
#include "AcceptHeaderVisitor.h"

using namespace antlrcpp;
using namespace antlr4;

AcceptHeaderParser::AcceptHeaderParser(TokenStream* input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA,
                                             _sharedContextCache);
}

AcceptHeaderParser::~AcceptHeaderParser() { delete _interpreter; }

std::string AcceptHeaderParser::getGrammarFileName() const {
  return "AcceptHeader.g4";
}

const std::vector<std::string>& AcceptHeaderParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& AcceptHeaderParser::getVocabulary() const {
  return _vocabulary;
}

//----------------- AcceptContext
//------------------------------------------------------------------

AcceptHeaderParser::AcceptContext::AcceptContext(ParserRuleContext* parent,
                                                 size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

std::vector<AcceptHeaderParser::RangeAndParamsContext*>
AcceptHeaderParser::AcceptContext::rangeAndParams() {
  return getRuleContexts<AcceptHeaderParser::RangeAndParamsContext>();
}

AcceptHeaderParser::RangeAndParamsContext*
AcceptHeaderParser::AcceptContext::rangeAndParams(size_t i) {
  return getRuleContext<AcceptHeaderParser::RangeAndParamsContext>(i);
}

std::vector<tree::TerminalNode*> AcceptHeaderParser::AcceptContext::OWS() {
  return getTokens(AcceptHeaderParser::OWS);
}

tree::TerminalNode* AcceptHeaderParser::AcceptContext::OWS(size_t i) {
  return getToken(AcceptHeaderParser::OWS, i);
}

size_t AcceptHeaderParser::AcceptContext::getRuleIndex() const {
  return AcceptHeaderParser::RuleAccept;
}

void AcceptHeaderParser::AcceptContext::enterRule(
    tree::ParseTreeListener* listener) {
  auto parserListener = dynamic_cast<AcceptHeaderListener*>(listener);
  if (parserListener != nullptr) parserListener->enterAccept(this);
}

void AcceptHeaderParser::AcceptContext::exitRule(
    tree::ParseTreeListener* listener) {
  auto parserListener = dynamic_cast<AcceptHeaderListener*>(listener);
  if (parserListener != nullptr) parserListener->exitAccept(this);
}

antlrcpp::Any AcceptHeaderParser::AcceptContext::accept(
    tree::ParseTreeVisitor* visitor) {
  if (auto parserVisitor = dynamic_cast<AcceptHeaderVisitor*>(visitor))
    return parserVisitor->visitAccept(this);
  else
    return visitor->visitChildren(this);
}

AcceptHeaderParser::AcceptContext* AcceptHeaderParser::accept() {
  AcceptContext* _localctx =
      _tracker.createInstance<AcceptContext>(_ctx, getState());
  enterRule(_localctx, 0, AcceptHeaderParser::RuleAccept);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(30);
    rangeAndParams();
    setState(47);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == AcceptHeaderParser::T__0

           || _la == AcceptHeaderParser::OWS) {
      setState(34);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == AcceptHeaderParser::OWS) {
        setState(31);
        match(AcceptHeaderParser::OWS);
        setState(36);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(37);
      match(AcceptHeaderParser::T__0);
      setState(41);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == AcceptHeaderParser::OWS) {
        setState(38);
        match(AcceptHeaderParser::OWS);
        setState(43);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(44);
      rangeAndParams();
      setState(49);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }

  } catch (RecognitionException& e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AcceptWithEofContext
//------------------------------------------------------------------

AcceptHeaderParser::AcceptWithEofContext::AcceptWithEofContext(
    ParserRuleContext* parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

AcceptHeaderParser::AcceptContext*
AcceptHeaderParser::AcceptWithEofContext::accept() {
  return getRuleContext<AcceptHeaderParser::AcceptContext>(0);
}

tree::TerminalNode* AcceptHeaderParser::AcceptWithEofContext::EOF() {
  return getToken(AcceptHeaderParser::EOF, 0);
}

size_t AcceptHeaderParser::AcceptWithEofContext::getRuleIndex() const {
  return AcceptHeaderParser::RuleAcceptWithEof;
}

void AcceptHeaderParser::AcceptWithEofContext::enterRule(
    tree::ParseTreeListener* listener) {
  auto parserListener = dynamic_cast<AcceptHeaderListener*>(listener);
  if (parserListener != nullptr) parserListener->enterAcceptWithEof(this);
}

void AcceptHeaderParser::AcceptWithEofContext::exitRule(
    tree::ParseTreeListener* listener) {
  auto parserListener = dynamic_cast<AcceptHeaderListener*>(listener);
  if (parserListener != nullptr) parserListener->exitAcceptWithEof(this);
}

antlrcpp::Any AcceptHeaderParser::AcceptWithEofContext::accept(
    tree::ParseTreeVisitor* visitor) {
  if (auto parserVisitor = dynamic_cast<AcceptHeaderVisitor*>(visitor))
    return parserVisitor->visitAcceptWithEof(this);
  else
    return visitor->visitChildren(this);
}

AcceptHeaderParser::AcceptWithEofContext* AcceptHeaderParser::acceptWithEof() {
  AcceptWithEofContext* _localctx =
      _tracker.createInstance<AcceptWithEofContext>(_ctx, getState());
  enterRule(_localctx, 2, AcceptHeaderParser::RuleAcceptWithEof);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(50);
    accept();
    setState(51);
    match(AcceptHeaderParser::EOF);

  } catch (RecognitionException& e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RangeAndParamsContext
//------------------------------------------------------------------

AcceptHeaderParser::RangeAndParamsContext::RangeAndParamsContext(
    ParserRuleContext* parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

AcceptHeaderParser::MediaRangeContext*
AcceptHeaderParser::RangeAndParamsContext::mediaRange() {
  return getRuleContext<AcceptHeaderParser::MediaRangeContext>(0);
}

AcceptHeaderParser::AcceptParamsContext*
AcceptHeaderParser::RangeAndParamsContext::acceptParams() {
  return getRuleContext<AcceptHeaderParser::AcceptParamsContext>(0);
}

size_t AcceptHeaderParser::RangeAndParamsContext::getRuleIndex() const {
  return AcceptHeaderParser::RuleRangeAndParams;
}

void AcceptHeaderParser::RangeAndParamsContext::enterRule(
    tree::ParseTreeListener* listener) {
  auto parserListener = dynamic_cast<AcceptHeaderListener*>(listener);
  if (parserListener != nullptr) parserListener->enterRangeAndParams(this);
}

void AcceptHeaderParser::RangeAndParamsContext::exitRule(
    tree::ParseTreeListener* listener) {
  auto parserListener = dynamic_cast<AcceptHeaderListener*>(listener);
  if (parserListener != nullptr) parserListener->exitRangeAndParams(this);
}

antlrcpp::Any AcceptHeaderParser::RangeAndParamsContext::accept(
    tree::ParseTreeVisitor* visitor) {
  if (auto parserVisitor = dynamic_cast<AcceptHeaderVisitor*>(visitor))
    return parserVisitor->visitRangeAndParams(this);
  else
    return visitor->visitChildren(this);
}

AcceptHeaderParser::RangeAndParamsContext*
AcceptHeaderParser::rangeAndParams() {
  RangeAndParamsContext* _localctx =
      _tracker.createInstance<RangeAndParamsContext>(_ctx, getState());
  enterRule(_localctx, 4, AcceptHeaderParser::RuleRangeAndParams);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(53);
    mediaRange();
    setState(55);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(
        _input, 3, _ctx)) {
      case 1: {
        setState(54);
        acceptParams();
        break;
      }

      default:
        break;
    }

  } catch (RecognitionException& e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MediaRangeContext
//------------------------------------------------------------------

AcceptHeaderParser::MediaRangeContext::MediaRangeContext(
    ParserRuleContext* parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode* AcceptHeaderParser::MediaRangeContext::MediaRangeAll() {
  return getToken(AcceptHeaderParser::MediaRangeAll, 0);
}

std::vector<AcceptHeaderParser::ParameterContext*>
AcceptHeaderParser::MediaRangeContext::parameter() {
  return getRuleContexts<AcceptHeaderParser::ParameterContext>();
}

AcceptHeaderParser::ParameterContext*
AcceptHeaderParser::MediaRangeContext::parameter(size_t i) {
  return getRuleContext<AcceptHeaderParser::ParameterContext>(i);
}

AcceptHeaderParser::TypeContext* AcceptHeaderParser::MediaRangeContext::type() {
  return getRuleContext<AcceptHeaderParser::TypeContext>(0);
}

tree::TerminalNode* AcceptHeaderParser::MediaRangeContext::Slash() {
  return getToken(AcceptHeaderParser::Slash, 0);
}

tree::TerminalNode* AcceptHeaderParser::MediaRangeContext::Star() {
  return getToken(AcceptHeaderParser::Star, 0);
}

AcceptHeaderParser::SubtypeContext*
AcceptHeaderParser::MediaRangeContext::subtype() {
  return getRuleContext<AcceptHeaderParser::SubtypeContext>(0);
}

std::vector<tree::TerminalNode*> AcceptHeaderParser::MediaRangeContext::OWS() {
  return getTokens(AcceptHeaderParser::OWS);
}

tree::TerminalNode* AcceptHeaderParser::MediaRangeContext::OWS(size_t i) {
  return getToken(AcceptHeaderParser::OWS, i);
}

size_t AcceptHeaderParser::MediaRangeContext::getRuleIndex() const {
  return AcceptHeaderParser::RuleMediaRange;
}

void AcceptHeaderParser::MediaRangeContext::enterRule(
    tree::ParseTreeListener* listener) {
  auto parserListener = dynamic_cast<AcceptHeaderListener*>(listener);
  if (parserListener != nullptr) parserListener->enterMediaRange(this);
}

void AcceptHeaderParser::MediaRangeContext::exitRule(
    tree::ParseTreeListener* listener) {
  auto parserListener = dynamic_cast<AcceptHeaderListener*>(listener);
  if (parserListener != nullptr) parserListener->exitMediaRange(this);
}

antlrcpp::Any AcceptHeaderParser::MediaRangeContext::accept(
    tree::ParseTreeVisitor* visitor) {
  if (auto parserVisitor = dynamic_cast<AcceptHeaderVisitor*>(visitor))
    return parserVisitor->visitMediaRange(this);
  else
    return visitor->visitChildren(this);
}

AcceptHeaderParser::MediaRangeContext* AcceptHeaderParser::mediaRange() {
  MediaRangeContext* _localctx =
      _tracker.createInstance<MediaRangeContext>(_ctx, getState());
  enterRule(_localctx, 6, AcceptHeaderParser::RuleMediaRange);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(66);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(
        _input, 4, _ctx)) {
      case 1: {
        setState(57);
        match(AcceptHeaderParser::MediaRangeAll);
        break;
      }

      case 2: {
        setState(58);
        type();
        setState(59);
        match(AcceptHeaderParser::Slash);
        setState(60);
        match(AcceptHeaderParser::Star);
        break;
      }

      case 3: {
        setState(62);
        type();
        setState(63);
        match(AcceptHeaderParser::Slash);
        setState(64);
        subtype();
        break;
      }

      default:
        break;
    }
    setState(84);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7,
                                                                     _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(71);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == AcceptHeaderParser::OWS) {
          setState(68);
          match(AcceptHeaderParser::OWS);
          setState(73);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        setState(74);
        match(AcceptHeaderParser::T__1);
        setState(78);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == AcceptHeaderParser::OWS) {
          setState(75);
          match(AcceptHeaderParser::OWS);
          setState(80);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        setState(81);
        parameter();
      }
      setState(86);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input,
                                                                       7, _ctx);
    }

  } catch (RecognitionException& e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeContext
//------------------------------------------------------------------

AcceptHeaderParser::TypeContext::TypeContext(ParserRuleContext* parent,
                                             size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

AcceptHeaderParser::TokenContext* AcceptHeaderParser::TypeContext::token() {
  return getRuleContext<AcceptHeaderParser::TokenContext>(0);
}

size_t AcceptHeaderParser::TypeContext::getRuleIndex() const {
  return AcceptHeaderParser::RuleType;
}

void AcceptHeaderParser::TypeContext::enterRule(
    tree::ParseTreeListener* listener) {
  auto parserListener = dynamic_cast<AcceptHeaderListener*>(listener);
  if (parserListener != nullptr) parserListener->enterType(this);
}

void AcceptHeaderParser::TypeContext::exitRule(
    tree::ParseTreeListener* listener) {
  auto parserListener = dynamic_cast<AcceptHeaderListener*>(listener);
  if (parserListener != nullptr) parserListener->exitType(this);
}

antlrcpp::Any AcceptHeaderParser::TypeContext::accept(
    tree::ParseTreeVisitor* visitor) {
  if (auto parserVisitor = dynamic_cast<AcceptHeaderVisitor*>(visitor))
    return parserVisitor->visitType(this);
  else
    return visitor->visitChildren(this);
}

AcceptHeaderParser::TypeContext* AcceptHeaderParser::type() {
  TypeContext* _localctx =
      _tracker.createInstance<TypeContext>(_ctx, getState());
  enterRule(_localctx, 8, AcceptHeaderParser::RuleType);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(87);
    token();

  } catch (RecognitionException& e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SubtypeContext
//------------------------------------------------------------------

AcceptHeaderParser::SubtypeContext::SubtypeContext(ParserRuleContext* parent,
                                                   size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

AcceptHeaderParser::TokenContext* AcceptHeaderParser::SubtypeContext::token() {
  return getRuleContext<AcceptHeaderParser::TokenContext>(0);
}

size_t AcceptHeaderParser::SubtypeContext::getRuleIndex() const {
  return AcceptHeaderParser::RuleSubtype;
}

void AcceptHeaderParser::SubtypeContext::enterRule(
    tree::ParseTreeListener* listener) {
  auto parserListener = dynamic_cast<AcceptHeaderListener*>(listener);
  if (parserListener != nullptr) parserListener->enterSubtype(this);
}

void AcceptHeaderParser::SubtypeContext::exitRule(
    tree::ParseTreeListener* listener) {
  auto parserListener = dynamic_cast<AcceptHeaderListener*>(listener);
  if (parserListener != nullptr) parserListener->exitSubtype(this);
}

antlrcpp::Any AcceptHeaderParser::SubtypeContext::accept(
    tree::ParseTreeVisitor* visitor) {
  if (auto parserVisitor = dynamic_cast<AcceptHeaderVisitor*>(visitor))
    return parserVisitor->visitSubtype(this);
  else
    return visitor->visitChildren(this);
}

AcceptHeaderParser::SubtypeContext* AcceptHeaderParser::subtype() {
  SubtypeContext* _localctx =
      _tracker.createInstance<SubtypeContext>(_ctx, getState());
  enterRule(_localctx, 10, AcceptHeaderParser::RuleSubtype);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(89);
    token();

  } catch (RecognitionException& e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AcceptParamsContext
//------------------------------------------------------------------

AcceptHeaderParser::AcceptParamsContext::AcceptParamsContext(
    ParserRuleContext* parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

AcceptHeaderParser::WeightContext*
AcceptHeaderParser::AcceptParamsContext::weight() {
  return getRuleContext<AcceptHeaderParser::WeightContext>(0);
}

std::vector<AcceptHeaderParser::AcceptExtContext*>
AcceptHeaderParser::AcceptParamsContext::acceptExt() {
  return getRuleContexts<AcceptHeaderParser::AcceptExtContext>();
}

AcceptHeaderParser::AcceptExtContext*
AcceptHeaderParser::AcceptParamsContext::acceptExt(size_t i) {
  return getRuleContext<AcceptHeaderParser::AcceptExtContext>(i);
}

size_t AcceptHeaderParser::AcceptParamsContext::getRuleIndex() const {
  return AcceptHeaderParser::RuleAcceptParams;
}

void AcceptHeaderParser::AcceptParamsContext::enterRule(
    tree::ParseTreeListener* listener) {
  auto parserListener = dynamic_cast<AcceptHeaderListener*>(listener);
  if (parserListener != nullptr) parserListener->enterAcceptParams(this);
}

void AcceptHeaderParser::AcceptParamsContext::exitRule(
    tree::ParseTreeListener* listener) {
  auto parserListener = dynamic_cast<AcceptHeaderListener*>(listener);
  if (parserListener != nullptr) parserListener->exitAcceptParams(this);
}

antlrcpp::Any AcceptHeaderParser::AcceptParamsContext::accept(
    tree::ParseTreeVisitor* visitor) {
  if (auto parserVisitor = dynamic_cast<AcceptHeaderVisitor*>(visitor))
    return parserVisitor->visitAcceptParams(this);
  else
    return visitor->visitChildren(this);
}

AcceptHeaderParser::AcceptParamsContext* AcceptHeaderParser::acceptParams() {
  AcceptParamsContext* _localctx =
      _tracker.createInstance<AcceptParamsContext>(_ctx, getState());
  enterRule(_localctx, 12, AcceptHeaderParser::RuleAcceptParams);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(91);
    weight();
    setState(95);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8,
                                                                     _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(92);
        acceptExt();
      }
      setState(97);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input,
                                                                       8, _ctx);
    }

  } catch (RecognitionException& e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- WeightContext
//------------------------------------------------------------------

AcceptHeaderParser::WeightContext::WeightContext(ParserRuleContext* parent,
                                                 size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

AcceptHeaderParser::QvalueContext* AcceptHeaderParser::WeightContext::qvalue() {
  return getRuleContext<AcceptHeaderParser::QvalueContext>(0);
}

std::vector<tree::TerminalNode*> AcceptHeaderParser::WeightContext::OWS() {
  return getTokens(AcceptHeaderParser::OWS);
}

tree::TerminalNode* AcceptHeaderParser::WeightContext::OWS(size_t i) {
  return getToken(AcceptHeaderParser::OWS, i);
}

size_t AcceptHeaderParser::WeightContext::getRuleIndex() const {
  return AcceptHeaderParser::RuleWeight;
}

void AcceptHeaderParser::WeightContext::enterRule(
    tree::ParseTreeListener* listener) {
  auto parserListener = dynamic_cast<AcceptHeaderListener*>(listener);
  if (parserListener != nullptr) parserListener->enterWeight(this);
}

void AcceptHeaderParser::WeightContext::exitRule(
    tree::ParseTreeListener* listener) {
  auto parserListener = dynamic_cast<AcceptHeaderListener*>(listener);
  if (parserListener != nullptr) parserListener->exitWeight(this);
}

antlrcpp::Any AcceptHeaderParser::WeightContext::accept(
    tree::ParseTreeVisitor* visitor) {
  if (auto parserVisitor = dynamic_cast<AcceptHeaderVisitor*>(visitor))
    return parserVisitor->visitWeight(this);
  else
    return visitor->visitChildren(this);
}

AcceptHeaderParser::WeightContext* AcceptHeaderParser::weight() {
  WeightContext* _localctx =
      _tracker.createInstance<WeightContext>(_ctx, getState());
  enterRule(_localctx, 14, AcceptHeaderParser::RuleWeight);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(101);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == AcceptHeaderParser::OWS) {
      setState(98);
      match(AcceptHeaderParser::OWS);
      setState(103);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(104);
    match(AcceptHeaderParser::T__1);
    setState(108);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == AcceptHeaderParser::OWS) {
      setState(105);
      match(AcceptHeaderParser::OWS);
      setState(110);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(111);
    match(AcceptHeaderParser::T__2);
    setState(112);
    match(AcceptHeaderParser::T__3);
    setState(113);
    qvalue();

  } catch (RecognitionException& e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- QvalueContext
//------------------------------------------------------------------

AcceptHeaderParser::QvalueContext::QvalueContext(ParserRuleContext* parent,
                                                 size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

std::vector<tree::TerminalNode*> AcceptHeaderParser::QvalueContext::DIGIT() {
  return getTokens(AcceptHeaderParser::DIGIT);
}

tree::TerminalNode* AcceptHeaderParser::QvalueContext::DIGIT(size_t i) {
  return getToken(AcceptHeaderParser::DIGIT, i);
}

tree::TerminalNode* AcceptHeaderParser::QvalueContext::Dot() {
  return getToken(AcceptHeaderParser::Dot, 0);
}

size_t AcceptHeaderParser::QvalueContext::getRuleIndex() const {
  return AcceptHeaderParser::RuleQvalue;
}

void AcceptHeaderParser::QvalueContext::enterRule(
    tree::ParseTreeListener* listener) {
  auto parserListener = dynamic_cast<AcceptHeaderListener*>(listener);
  if (parserListener != nullptr) parserListener->enterQvalue(this);
}

void AcceptHeaderParser::QvalueContext::exitRule(
    tree::ParseTreeListener* listener) {
  auto parserListener = dynamic_cast<AcceptHeaderListener*>(listener);
  if (parserListener != nullptr) parserListener->exitQvalue(this);
}

antlrcpp::Any AcceptHeaderParser::QvalueContext::accept(
    tree::ParseTreeVisitor* visitor) {
  if (auto parserVisitor = dynamic_cast<AcceptHeaderVisitor*>(visitor))
    return parserVisitor->visitQvalue(this);
  else
    return visitor->visitChildren(this);
}

AcceptHeaderParser::QvalueContext* AcceptHeaderParser::qvalue() {
  QvalueContext* _localctx =
      _tracker.createInstance<QvalueContext>(_ctx, getState());
  enterRule(_localctx, 16, AcceptHeaderParser::RuleQvalue);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(115);
    match(AcceptHeaderParser::DIGIT);
    setState(123);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == AcceptHeaderParser::Dot) {
      setState(116);
      match(AcceptHeaderParser::Dot);
      setState(120);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == AcceptHeaderParser::DIGIT) {
        setState(117);
        match(AcceptHeaderParser::DIGIT);
        setState(122);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
    }

  } catch (RecognitionException& e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AcceptExtContext
//------------------------------------------------------------------

AcceptHeaderParser::AcceptExtContext::AcceptExtContext(
    ParserRuleContext* parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

std::vector<AcceptHeaderParser::TokenContext*>
AcceptHeaderParser::AcceptExtContext::token() {
  return getRuleContexts<AcceptHeaderParser::TokenContext>();
}

AcceptHeaderParser::TokenContext* AcceptHeaderParser::AcceptExtContext::token(
    size_t i) {
  return getRuleContext<AcceptHeaderParser::TokenContext>(i);
}

std::vector<tree::TerminalNode*> AcceptHeaderParser::AcceptExtContext::OWS() {
  return getTokens(AcceptHeaderParser::OWS);
}

tree::TerminalNode* AcceptHeaderParser::AcceptExtContext::OWS(size_t i) {
  return getToken(AcceptHeaderParser::OWS, i);
}

AcceptHeaderParser::QuotedStringContext*
AcceptHeaderParser::AcceptExtContext::quotedString() {
  return getRuleContext<AcceptHeaderParser::QuotedStringContext>(0);
}

size_t AcceptHeaderParser::AcceptExtContext::getRuleIndex() const {
  return AcceptHeaderParser::RuleAcceptExt;
}

void AcceptHeaderParser::AcceptExtContext::enterRule(
    tree::ParseTreeListener* listener) {
  auto parserListener = dynamic_cast<AcceptHeaderListener*>(listener);
  if (parserListener != nullptr) parserListener->enterAcceptExt(this);
}

void AcceptHeaderParser::AcceptExtContext::exitRule(
    tree::ParseTreeListener* listener) {
  auto parserListener = dynamic_cast<AcceptHeaderListener*>(listener);
  if (parserListener != nullptr) parserListener->exitAcceptExt(this);
}

antlrcpp::Any AcceptHeaderParser::AcceptExtContext::accept(
    tree::ParseTreeVisitor* visitor) {
  if (auto parserVisitor = dynamic_cast<AcceptHeaderVisitor*>(visitor))
    return parserVisitor->visitAcceptExt(this);
  else
    return visitor->visitChildren(this);
}

AcceptHeaderParser::AcceptExtContext* AcceptHeaderParser::acceptExt() {
  AcceptExtContext* _localctx =
      _tracker.createInstance<AcceptExtContext>(_ctx, getState());
  enterRule(_localctx, 18, AcceptHeaderParser::RuleAcceptExt);
  size_t _la = 0;
